--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -449,7 +449,8 @@ $RECYCLE.BIN/
 ##
 ## Visual Studio Code
 ##
-.vscode/
+# .vscode/
+.vscode/solution-explorer/
 # !.vscode/settings.json
 # !.vscode/tasks.json
 # !.vscode/launch.json
