--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -116,7 +116,7 @@ dist
 .tern-port
 
 # VSCode
-.vscode/
+# .vscode/
 
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
@@ -130,3 +130,6 @@ dist
 
 # API Keys
 js/config.js
+
+# Assets
+assets/
