--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -129,12 +129,7 @@ dist
 .pnp.*
 
 # API Keys
-js/config.js
+js/carousel/config.js
 
-<<<<<<< HEAD
 # Assets
 assets/
-=======
-# Images
-assets/
->>>>>>> e3c0d14d9cece18e7704255ca88b6fd46c770f24
